--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "lodash": "4.17.10",
+    "lodash": "4.17.21", //updated the lodash version//
     "md5": "^2.3.0"
   },
   "author": "OEE IntelliSuite",
